2008-09-11  Aaron Bockover  <abock@gnome.org>

	Banshee 1.3.0 Released

2008-09-11  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Services/Banshee.Collection.Indexer/CollectionIndexerService.cs:
	* src/Core/Banshee.Services/Banshee.Collection.Indexer/ICollectionIndexerService.cs:
	Split HasCollectionChanged method to HasCollectionCountChanged and 
	HasCollectionLastModifiedChanged methods

2008-09-11  Aaron Bockover  <abock@gnome.org>

	* src/Extensions/Banshee.FileSystemQueue/Banshee.FileSystemQueue/FileSystemQueueSource.cs:
	Implement playlist loading into the FSQ

	* src/Core/Banshee.Services/Banshee.Playlist/PlaylistFileUtil.cs:
	Allow playlist importing to work against any PrimarySource

	* configure.ac: Disable the DEVEL_BUILD

2008-09-11  Gabriel Burt  <gabriel.burt@gmail.com>

	* build/m4/banshee/dap-ipod.m4: Bump ipod-sharp to 0.8.1

2008-09-11  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Gui/GlobalActions.cs:
	* src/Core/Banshee.ThickClient/Resources/core-ui-actions-layout.xml: Add
	Rescan action that triggers rescan of the Music Library folder.

	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseImportManager.cs:
	Remove unnecessary DateAdded set.

	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseTrackInfo.cs:
	* src/Core/Banshee.Core/Banshee.Collection/TrackInfo.cs: Add
	FileModifiedStamp and LastSyncedStamp properties.

	* src/Core/Banshee.Services/Makefile.am:
	* src/Core/Banshee.Services/Banshee.Services.csproj:
	* src/Core/Banshee.Services/Banshee.Collection/RescanPipeline.cs: New file
	that scans all files in a Library's BaseDirectory, importing new items,
	removing items no longer on disk, and identifying items that were renamed.

	* src/Libraries/Hyena/Hyena.Collections/QueuePipelineElement.cs:
	* src/Core/Banshee.Services/Banshee.Collection/ImportManager.cs: Factor a
	lot of the counting of the ImportElement up into QueuePipelineElement.
