@@ -1,3 +1,12 @@
+2008-09-12  Aaron Bockover  <abock@gnome.org>
+
+	* src/Core/Banshee.Services/Banshee.Collection.Indexer/CollectionIndexerService.cs:
+	Remove unused variable
+
+	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Recommendations/RecommendationService.cs:
+	* src/Libraries/Hyena/Hyena.Collections/QueuePipelineElement.cs: Fixes to
+	work around compiler bugs in gmcs 1.2.5
+
 2008-09-11  Aaron Bockover  <abock@gnome.org>
 
 	Banshee 1.3.0 Released
